--- a/index.html
+++ b/index.html
@@ -81,30 +81,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  
-  <script type="text/javascript">
-
-  var html = '';
-  $(document).ready(function () {
-      var apiURL = 'https://api.github.com/users/symfony/repos?per_page=1000';
-      $.ajax({
-        url:apiURL,
-        type:"get",
-        dataType:"json",
-        success:function(data){
-            $.each(data,function(key,value){
-                html += '<li>'+value.name+'</li>';
-            })
-            $('#repoList').html(html);
-
-        } 
-      })
-  });
-    
-
-
-  </script>
-  
-
+  <script src="app.js"></script>
   </body>
 </html>
