--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1>Cimpress Project</h1>
         <p class="lead">This page contains the list of all Symfony Repositories</p>
 
-        <ul id="repoList">
+        <ul class="list-group" id="repoList">
 
         </ul>
 
